# pdfreports

./: .gitignore  README.md  pyproject.toml
notebooks/: development.ipynb
src/: reports.py
templates/: template.html
